--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,10 @@ x64/
 build/
 [Bb]in/
 [Oo]bj/
-
+Edu_Store/.vs/
+.vs/
+bin/
+obj/
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
 
